--- a/prog2/frontend/tela11.html
+++ b/prog2/frontend/tela11.html
@@ -61,72 +61,83 @@
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>123889</td>
                                 <td>Shampoo Palmolive</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>123889</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>123889</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>123889</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>123889</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>123889</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -150,7 +161,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -158,7 +173,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -166,7 +185,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -174,7 +197,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -182,7 +209,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -190,7 +221,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -198,7 +233,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -206,7 +245,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -214,7 +257,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -222,7 +269,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9974328</td>
@@ -230,79 +281,11 @@
                                 <td>Higiene</td>
                                 <td>R$ 40,00</td>
                                 <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
-                            </tr>
-                            <tr>
-                                <td>9974328</td>
-                                <td>Shampoo Palmolive</td>
-                                <td>Higiene</td>
-                                <td>R$ 40,00</td>
-                                <td>12/06/2020</td>
-                                <td>//</td>
+                                <td>
+                                    <a href="#">
+                                        <img src="img/edit.png">
+                                    </a>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
