--- a/prog2/frontend/tela12.html
+++ b/prog2/frontend/tela12.html
@@ -44,42 +44,42 @@
             </header>
 
             <main class="grid-conteiner">
-                <div id="titulo">
-                    CADASTRO
+                <div class="grid-conteiner" id="titulo">
+                    <h1>CADASTRO DE PRODUTO</h1>
                 </div>
 
                 <div class="grid-conteiner" id="formulario">
                     <form action="" method="post" id="form"></form>
 
-                    <input id="i-img" type="image" src="img/default.png" name="">
+                    <input id="i-img" type="image" src="img/default.png" >
 
-                    <label for="i-codigo" id="l-codigo">codigo</label>
-                    <input id="i-codigo" type="text" name="" form="form">
+                    <label for="i-codigo" id="l-codigo">Código</label>
+                    <input id="i-codigo" type="text" form="form">
 
-                    <label for="i-nome" id="l-nome">nome</label>
-                    <input id="i-nome" type="text" name="" form="form">
+                    <label for="i-nome" id="l-nome">Nome</label>
+                    <input id="i-nome" type="text" form="form">
 
-                    <label for="i-valor" id="l-valor">valor</label>
-                    <input id="i-valor" type="text" name="" form="form">
+                    <label for="i-valor" id="l-valor">Valor</label>
+                    <input id="i-valor" type="text" form="form">
 
-                    <label for="i-tipo" id="l-tipo">tipo</label>
-                    <input id="i-tipo" type="text" name="" form="form">
+                    <label for="i-tipo" id="l-tipo">Tipo</label>
+                    <input id="i-tipo" type="text" form="form">
 
-                    <label for="i-categoria" id="l-categoria">categoria</label>
-                    <input id="i-categoria" type="text" name="" form="form">
+                    <label for="i-categoria" id="l-categoria">Categorias</label>
+                    <input id="i-categoria" type="text" form="form">
 
-                    <label for="i-fabricacao" id="l-fabricacao">fabricacao</label>
-                    <input id="i-fabricacao" type="text" name="" form="form">
+                    <label for="i-fabricacao" id="l-fabricacao">Fabricação</label>
+                    <input id="i-fabricacao" type="text" form="form">
 
-                    <label for="i-validade" id="l-validade">validade</label>
-                    <input id="i-validade" type="text" name="" form="form">
+                    <label for="i-validade" id="l-validade">Validade</label>
+                    <input id="i-validade" type="text" form="form">
 
-                    <label for="i-descricao" id="l-descricao">descricao</label>
+                    <label for="i-descricao" id="l-descricao">Descrição</label>
                     <textarea id="i-descricao" rows="2" form="form"></textarea>
                 </div>
 
                 <div class="grid-conteiner" id="envio">
-                    <input id="i-cadastrar" type="submit" name="" value="CADASTRAR" form="form">
+                    <input id="i-cadastrar" type="submit"  value="CADASTRAR" form="form">
                 </div>
             </main>
         </div>
