--- a/prog2/frontend/tela14.html
+++ b/prog2/frontend/tela14.html
@@ -56,67 +56,101 @@
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>user</td>
                             <td>user@gmail.com</td>
-                            <td>X</td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>X</td>
-                        </tr>
-                        <tr>
-                            <td>user</td>
-                            <td>user@gmail.com</td>
-                            <td>X</td>
+                            <td>
+                                <a href="#">
+                                    <img src="img/excluir.png">
+                                </a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
