--- a/prog2/frontend/tela5.html
+++ b/prog2/frontend/tela5.html
@@ -13,7 +13,21 @@
 
     <body>
       <div class="grid-conteiner">
-        <div class="cadastro"></div>
+        <div class="cadastro">
+            <div class="logo">
+                <img src="img/vitari.jpg">
+            </div>
+
+            <div class="entrada">
+
+                <p>Usuario: <input type="text" name="usuario" id="usuario" autofocus><br>
+                <p>Email: <input type="text" name="email" id="email"><br>
+                <p>Senha: <input type="password" name="senha" id="senha"><br>
+                <p>Confirmar senha: <input type="password" name="confirmasenha" id="confirmasenha"><br>
+                <button type="button" name="entrar">Entrar</button>
+            </div>
+
+        </div>
       </div>
     </body>
 </html>
