button convertidos para links

--- a/prog2/frontend/tela11.html
+++ b/prog2/frontend/tela11.html
@@ -25,26 +25,31 @@
                     <img src="img/menu.png" alt="opcoes">
                 </div>
                 <div id="usuarios">
-                    <button type="button">USUÁRIOS</button>
+                    <a href="tela14.html">USUÁRIOS</a>
                 </div>
                 <div id="produtos">
-                    <button type="button">PRODUTOS</button>
+                    <a href="tela10.html">PRODUTOS</a>
                 </div>
 
                 <div id="logo">
-                    <img src="img/vitari.jpg" alt="logo">
+                    <a href="tela1.html">
+                        <img src="img/vitari.jpg" alt="logo">
+                    </a>
                 </div>
                 <div id="perfil">
-                    <img src="img/perfil.png" alt="perfil">
+                    <a href="#">
+                        <img src="img/perfil.png" alt="perfil">
+                    </a>
                 </div>
                 <div id="sair">
-                    <button type="button">SAIR</button>
+                    <a href="#">SAIR</a>
                 </div>
 
                 <div id="pesquisa">
                     <input type="text" placeholder="Pesquisar produtos..."/>
                 </div>
             </header>
+
 
             <main class="grid-conteiner">
                 <div id="tabela">
@@ -292,7 +297,7 @@
                 </div>
 
                 <div id="novo-produto">
-                    <button type="button">NOVO PRODUTO</button>
+                    <a href="#">NOVO PRODUTO</a>
                 </div>
             </main>
 
