--- a/prog2/frontend/tela10.html
+++ b/prog2/frontend/tela10.html
@@ -25,20 +25,24 @@
                     <img src="img/menu.png" alt="opcoes">
                 </div>
                 <div id="usuarios">
-                    <button type="button">USUÁRIOS</button>
+                    <a href="tela14.html">USUÁRIOS</a>
                 </div>
                 <div id="produtos">
-                    <button type="button">PRODUTOS</button>
+                    <a href="tela10.html">PRODUTOS</a>
                 </div>
 
                 <div id="logo">
-                    <img src="img/vitari.jpg" alt="logo">
+                    <a href="tela1.html">
+                        <img src="img/vitari.jpg" alt="logo">
+                    </a>
                 </div>
                 <div id="perfil">
-                    <img src="img/perfil.png" alt="perfil">
+                    <a href="#">
+                        <img src="img/perfil.png" alt="perfil">
+                    </a>
                 </div>
                 <div id="sair">
-                    <button type="button">SAIR</button>
+                    <a href="#">SAIR</a>
                 </div>
 
                 <div id="pesquisa">
@@ -46,11 +50,12 @@
                 </div>
             </header>
 
+
             <main class="grid-conteiner">
                 <div id="tabela"></div>
 
                 <div id="novo-produto">
-                    <button type="button">NOVO PRODUTO</button>
+                    <a href="#">NOVO PRODUTO</a>
                 </div>
             </main>
 
