--- a/prog2/frontend/tela13.html
+++ b/prog2/frontend/tela13.html
@@ -26,20 +26,24 @@
                     <img src="img/menu.png" alt="opcoes">
                 </div>
                 <div id="usuarios">
-                    <button type="button">USUÁRIOS</button>
+                    <a href="tela14.html">USUÁRIOS</a>
                 </div>
                 <div id="produtos">
-                    <button type="button">PRODUTOS</button>
+                    <a href="tela10.html">PRODUTOS</a>
                 </div>
 
                 <div id="logo">
-                    <img src="img/vitari.jpg" alt="logo">
+                    <a href="tela1.html">
+                        <img src="img/vitari.jpg" alt="logo">
+                    </a>
                 </div>
                 <div id="perfil">
-                    <img src="img/perfil.png" alt="perfil">
+                    <a href="#">
+                        <img src="img/perfil.png" alt="perfil">
+                    </a>
                 </div>
                 <div id="sair">
-                    <button type="button">SAIR</button>
+                    <a href="#">SAIR</a>
                 </div>
             </header>
 
@@ -79,8 +83,8 @@
                 </div>
 
                 <div class="grid-conteiner" id="envio">
-                    <input type="submit" id="i-excluir" name="" value="EXCLUIR" form="form">
-                    <input type="submit" id="i-alterar" name="" value="ALTERAR" form="form">
+                    <input type="submit" id="i-excluir" value="EXCLUIR" form="form">
+                    <input type="submit" id="i-alterar" value="ALTERAR" form="form">
                 </div>
             </main>
         </div>
