--- a/prog2/frontend/tela10.html
+++ b/prog2/frontend/tela10.html
@@ -55,7 +55,7 @@
                 <div id="tabela"></div>
 
                 <div id="novo-produto">
-                    <a href="#">NOVO PRODUTO</a>
+                    <a href="tela12.html">NOVO PRODUTO</a>
                 </div>
             </main>
 
