--- a/prog2/frontend/tela14.html
+++ b/prog2/frontend/tela14.html
@@ -43,6 +43,10 @@
                 <div id="sair">
                     <a href="#">SAIR</a>
                 </div>
+
+                <div id="pesquisa">
+                    <input type="text" placeholder="Pesquisar produtos..."/>
+                </div>
             </header>
 
             <main class="grid-conteiner">
