--- a/prog2/frontend/tela9.html
+++ b/prog2/frontend/tela9.html
@@ -43,9 +43,11 @@
                 <div id="sair">
                     <a href="#">SAIR</a>
                 </div>
+
+                <div id="pesquisa">
+                    <input type="text" placeholder="Pesquisar produtos..."/>
+                </div>
             </header>
-
-
         </div>
 
     </body>
