menu lateral adicionado telas 1 e 2

--- a/prog2/frontend/tela1.html
+++ b/prog2/frontend/tela1.html
@@ -21,8 +21,21 @@
             <header class="grid-conteiner">
                 <div id="categorias">
                     <img src="img/menu.png" alt="opcoes">
+                </div>
+                <div class="barra">
+                    <nav>
+                        <a href="#"><div class="link">UNHAS</div></a>
+                        <a href="#"><div class="link">MAQUIAGEM</div></a>
+                        <a href="#"><div class="link">CABELOS</div></a>
+                        <a href="#"><div class="link">KITS</div></a>
+                        <a href="#"><div class="link">HIGIENE</div></a>
+                        <a href="#"><div class="link">PELE</div></a>
+                        <a href="#"><div class="link">PERFUME</div></a>
+
+                    </nav>
 
                 </div>
+
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
