--- a/prog2/frontend/tela2.html
+++ b/prog2/frontend/tela2.html
@@ -27,6 +27,19 @@
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
+                <div class="barra">
+                    <nav>
+                        <a href="#"><div class="link">UNHAS</div></a>
+                        <a href="#"><div class="link">MAQUIAGEM</div></a>
+                        <a href="#"><div class="link">CABELOS</div></a>
+                        <a href="#"><div class="link">KITS</div></a>
+                        <a href="#"><div class="link">HIGIENE</div></a>
+                        <a href="#"><div class="link">PELE</div></a>
+                        <a href="#"><div class="link">PERFUME</div></a>
+
+                    </nav>
+
+                </div>
                 <div id="cadastro">
                     <a href="#"><img src="img/cadastro.png"></a>
 
