--- a/prog2/frontend/tela3.html
+++ b/prog2/frontend/tela3.html
@@ -25,6 +25,19 @@
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
+                <div class="barra" tabindex="0">
+                    <nav>
+                        <a href="#"><div class="link">UNHAS</div></a>
+                        <a href="#"><div class="link">MAQUIAGEM</div></a>
+                        <a href="#"><div class="link">CABELOS</div></a>
+                        <a href="#"><div class="link">KITS</div></a>
+                        <a href="#"><div class="link">HIGIENE</div></a>
+                        <a href="#"><div class="link">PELE</div></a>
+                        <a href="#"><div class="link">PERFUME</div></a>
+
+                    </nav>
+
+                </div>
 
                 <div id="cadastro">
                     <a href="#"><img src="img/cadastro.png"></a>
@@ -63,4 +76,21 @@
         </div>
 
     </body>
+
+    <script>
+
+        document.querySelector('#categorias > img').onclick = function(){
+            document.getElementsByClassName('barra')[0].style.display = 'grid';
+            document.getElementsByClassName('barra')[0].focus();
+
+        }
+
+        document.querySelector('.barra').onblur = function(){
+
+            document.getElementsByClassName('barra')[0].style.display = 'none';
+
+        }
+
+
+    </script>
 </html>
