--- a/prog2/frontend/tela6.html
+++ b/prog2/frontend/tela6.html
@@ -8,10 +8,9 @@
 
         <link rel="stylesheet" href="css/reset.css">
 
-        <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo1.css">
+        <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo7.css">
-
         <link rel="stylesheet" href="css/tela6.css">
     </head>
 
@@ -21,6 +20,19 @@
             <header class="grid-conteiner">
                 <div id="categorias">
                     <img src="img/menu.png" alt="opcoes">
+
+                </div>
+                <div class="barra" tabindex="0">
+                    <nav>
+                        <a href="#"><div class="link">UNHAS</div></a>
+                        <a href="#"><div class="link">MAQUIAGEM</div></a>
+                        <a href="#"><div class="link">CABELOS</div></a>
+                        <a href="#"><div class="link">KITS</div></a>
+                        <a href="#"><div class="link">HIGIENE</div></a>
+                        <a href="#"><div class="link">PELE</div></a>
+                        <a href="#"><div class="link">PERFUME</div></a>
+
+                    </nav>
 
                 </div>
                 <div id="logo">
@@ -116,5 +128,23 @@
             </main>
         </div>
 
+        <script>
+
+            document.querySelector('#categorias > img').onclick = function(){
+                document.getElementsByClassName('barra')[0].style.display = 'grid';
+                document.getElementsByClassName('barra')[0].focus();
+
+            }
+
+            document.querySelector('.barra').onblur = function(){
+
+                document.getElementsByClassName('barra')[0].style.display = 'none';
+
+            }
+
+
+        </script>
+
     </body>
+
 </html>
