--- a/prog2/frontend/tela8.html
+++ b/prog2/frontend/tela8.html
@@ -23,6 +23,19 @@
                     <img src="img/menu.png" alt="opcoes">
 
                 </div>
+                <div class="barra" tabindex="0">
+                    <nav>
+                        <a href="#"><div class="link">UNHAS</div></a>
+                        <a href="#"><div class="link">MAQUIAGEM</div></a>
+                        <a href="#"><div class="link">CABELOS</div></a>
+                        <a href="#"><div class="link">KITS</div></a>
+                        <a href="#"><div class="link">HIGIENE</div></a>
+                        <a href="#"><div class="link">PELE</div></a>
+                        <a href="#"><div class="link">PERFUME</div></a>
+
+                    </nav>
+
+                </div>
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
@@ -60,6 +73,22 @@
                 <div class="descricao">DESCRICAO</div>
             </main>
         </div>
+        <script>
+
+            document.querySelector('#categorias > img').onclick = function(){
+                document.getElementsByClassName('barra')[0].style.display = 'grid';
+                document.getElementsByClassName('barra')[0].focus();
+
+            }
+
+            document.querySelector('.barra').onblur = function(){
+
+                document.getElementsByClassName('barra')[0].style.display = 'none';
+
+            }
+
+
+        </script>
 
     </body>
 </html>
